--- a/HoursTracker/Views/Skills/Edit.cshtml
+++ b/HoursTracker/Views/Skills/Edit.cshtml
@@ -8,7 +8,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow">
-                <div class="card-header bg-warning text-dark">
+                <div class="card-header text-white" style="background-color: @Model.Color;">
                     <h4 class="mb-0"><i class="bi bi-pencil-square"></i> Chỉnh sửa Kỹ năng</h4>
                 </div>
                 <div class="card-body">
