--- a/HoursTracker/Views/PracticeLogs/Create.cshtml
+++ b/HoursTracker/Views/PracticeLogs/Create.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <div class="card-body">
                     <form asp-action="Create" id="practiceLogForm">
-                        <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+                        <div asp-validation-summary="All" class="text-danger mb-3"></div>
 
                         <div class="mb-3">
                             <label asp-for="SkillId" class="form-label"></label>
