--- a/HoursTracker/Views/PracticeLogs/Edit.cshtml
+++ b/HoursTracker/Views/PracticeLogs/Edit.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <div class="card-body">
                     <form asp-action="Edit" id="practiceLogForm">
-                        <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+                        <div asp-validation-summary="All" class="text-danger mb-3"></div>
                         <input type="hidden" asp-for="Id" />
                         <input type="hidden" asp-for="CreatedDate" />
 
